@@ -67,7 +67,7 @@ public class ActivityCalendarValidator {
 
     // Get list of weeks of all seasons
     final List<WeekProfileDto> weekProfiles =
-        seasonProfiles.stream().map(SeasonProfileDto::getWeekProfile).collect(Collectors.toList());
+        seasonProfiles.stream().map(SeasonProfileDto::getWeekProfile).toList();
 
     // Check if number of unique weeks (with unique week profile name)
     final long numberOfUniqueWeekNames =
@@ -114,18 +114,12 @@ public class ActivityCalendarValidator {
     // unique
     final List<DayProfileDto> dayProfiles =
         weekProfiles.stream().map(WeekProfileDto::getMonday).collect(Collectors.toList());
-    dayProfiles.addAll(
-        weekProfiles.stream().map(WeekProfileDto::getTuesday).collect(Collectors.toList()));
-    dayProfiles.addAll(
-        weekProfiles.stream().map(WeekProfileDto::getWednesday).collect(Collectors.toList()));
-    dayProfiles.addAll(
-        weekProfiles.stream().map(WeekProfileDto::getThursday).collect(Collectors.toList()));
-    dayProfiles.addAll(
-        weekProfiles.stream().map(WeekProfileDto::getFriday).collect(Collectors.toList()));
-    dayProfiles.addAll(
-        weekProfiles.stream().map(WeekProfileDto::getSaturday).collect(Collectors.toList()));
-    dayProfiles.addAll(
-        weekProfiles.stream().map(WeekProfileDto::getSunday).collect(Collectors.toList()));
+    dayProfiles.addAll(weekProfiles.stream().map(WeekProfileDto::getTuesday).toList());
+    dayProfiles.addAll(weekProfiles.stream().map(WeekProfileDto::getWednesday).toList());
+    dayProfiles.addAll(weekProfiles.stream().map(WeekProfileDto::getThursday).toList());
+    dayProfiles.addAll(weekProfiles.stream().map(WeekProfileDto::getFriday).toList());
+    dayProfiles.addAll(weekProfiles.stream().map(WeekProfileDto::getSaturday).toList());
+    dayProfiles.addAll(weekProfiles.stream().map(WeekProfileDto::getSunday).toList());
     final long numberOfUniqueDayIds =
         dayProfiles.stream().map(DayProfileDto::getDayId).distinct().count();
     if (numberOfUniqueDayIds > MAX_NUMBER_OF_DAYS) {
